<resources>
    <string name="app_name">Fantasy News</string>
    <string name="title_activity_match">Match</string>
    <string name="title_home">Loading data</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="playing_xi">playing XI</string>
    <string name="news">News</string>
    <string name="title_activity_main">Dream11 Fantasy news</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Upcoming</string>
    <string name="tab_text_2">Live</string>
    <string name="tab_text_3">Results</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_singlematch">singlematch</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="data_loading">Data loading</string>
    <string name="todo">TODO</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="todo1">TODO</string>
    <string name="today">Today</string>
    <string name="close">Close</string>
    <string name="image_is_loading_its_will_take_5_7_seconds_according_to_your_internet_speed">Image is loading... Its will take 5-7 seconds according to your internet speed</string>
    <string name="update">Update availbale</string>
</resources>
