<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scheduleLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/schedulebg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <ImageView
                    android:id="@+id/homeimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/series"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_loading"
                    android:textColor="#000"
                    android:textSize="10sp"
                    app:fontFamily="@font/ossb"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_loading"
                    android:textColor="#000"
                    app:fontFamily="@font/ossb" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/data_loading"
                    android:textColor="#000"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/venue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_loading"
                    android:textColor="#000"
                    android:textSize="10sp"
                    app:fontFamily="@font/osreg" />

                <LinearLayout
                    android:id="@+id/cricket"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone"
                    tools:ignore="UseCompoundDrawables">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cricket"
                        android:textColor="#000"
                        android:textSize="10sp"
                        app:fontFamily="@font/osb"
                    tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/football"
                    android:visibility="gone"
                    tools:ignore="UseCompoundDrawables">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/football"
                        android:textColor="#000"
                        android:textSize="10sp"
                        app:fontFamily="@font/osb"
                        tools:ignore="SmallSp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <ImageView
                    android:id="@+id/awayimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
